# big-data-infrastructure-exercises

./: .gitignore  .pre-commit-config.yaml  Makefile  README.adoc  pyproject.toml
bdi_api/: app.py  settings.py
bdi_api/examples/: __init__.py
bdi_api/s1/: README.adoc  exercise.py  hello.txt
bdi_api/s2/: README.adoc
bdi_api/s4/: README.adoc  exercise.py
bdi_api/s7/: README.adoc  exercise.py
bdi_api/s8/: README.adoc  exercise.py
bdi_api/s8/dags/: my_dag1.py
docker/: optimized.Dockerfile  simple.Dockerfile
docs/: api.adoc  env_variables.adoc  poetry.adoc  pydantic.adoc  pyenv.adoc
tests/: conftest.py
tests/examples/: test_examples.py
tests/s1/: test_s1.py
